# mcp-handley-lab

./: .coverage.maxwell.1930565.XcAIpkox  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  GTD_ARCHITECTURE.md  KNOWLEDGE_REDESIGN_PLAN.md  LICENSE  PKGBUILD  PKGBUILD.orig  PLAN.md  README.md  SECURITY.md  SESSION_STATUS.md  TODO.md  analyze_existing_schemas.py  anthropic-pricing-2025-07-01.txt  async_conversion_plan.md  codebase_src_only.md  debug_gemini_grounding.py  deep_research.txt  examine_raw_image_api_responses.py  extract_word_comments.py  gemini-embedding-api-docs.md  gemini-embedding-implementation-plan.md  gemini-embeddings-research.md  gemini-pre-prompt.md  gemini-pricing-2025-07-01.txt  gemini.md  gemini_codebase_analysis_suggestions.md  gemini_readme_review.md  greenfield.md  identify_image_metadata.py  improved_tool_descriptions.md  investigation_summary.md  mail.md  measure_optimized_schemas.py  measure_schema_tokens.py  notes_server_setup.md  (+21 more)
.claude/commands/: gemini-review.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: branch-protection.yml  ci.yml
1506.00171/: polychord.bbl  polychord.tex
docs/: building_mcp_with_llms.md  google-calendar-setup.md
scripts/: bump_version.py  check_version.py  check_version_bump.py  convert_group_yaml_to_notes.py  generate_tool_schemas.py  start-notes-server.py  version-bump-hook.sh
src/mcp_framework/code2prompt/: __main__.py
src/mcp_framework/common/: config.py
src/mcp_framework/google_calendar/: __main__.py
src/mcp_framework/jq/: __main__.py  tool.py
src/mcp_framework/vim/: tool.py
src/mcp_handley_lab/: __main__.py  tool_schemas.json
src/mcp_handley_lab/agent/: __init__.py  tool.py
src/mcp_handley_lab/arxiv/: __init__.py  tool.py
src/mcp_handley_lab/cli/: __init__.py  completion.py  config.py  discovery.py  formatter.py  main.py  rpc_client.py
src/mcp_handley_lab/code2prompt/: __main__.py  tool.py
src/mcp_handley_lab/common/: config.py  exceptions.py  io_utils.py  memory.py  pricing.py  process.py  terminal.py
src/mcp_handley_lab/email/: __init__.py  common.py  tool.py
src/mcp_handley_lab/github/: __init__.py  __main__.py  tool.py
src/mcp_handley_lab/google_calendar/: __init__.py  __main__.py  tool.py
src/mcp_handley_lab/google_maps/: __init__.py  tool.py
src/mcp_handley_lab/jq/: tool.py
src/mcp_handley_lab/knowledge/: __init__.py  generic_manager.py  generic_tools.py  manager.py  models.py  semantic_search.py  storage.py  tool.py
src/mcp_handley_lab/llm/: agent_utils.py  common.py  memory.py  model_loader.py  shared.py
src/mcp_handley_lab/mathematica/: __init__.py  cli.py  kernel_manager.py  kernel_manager_enhanced.py  server.py  simple_server.py  tool.py
src/mcp_handley_lab/mutt/: __init__.py  tool.py
src/mcp_handley_lab/notebook/: __init__.py  models.py  tool.py
tests/: README.md  conftest.py  email_test_setup.py  test_arxiv.py  test_cli.py  test_cli_discovery.py  test_code2prompt.py  test_code2prompt_main.py  test_config.py  test_email_integration.py  test_email_mock.py  test_email_move_unit.py  test_gemini.py  test_gemini_integration.py  test_gemini_main.py  test_generic_knowledge.py  test_google_calendar.py  test_google_calendar_main.py  test_jq.py  test_jq_main.py  test_knowledge_unit.py  test_mathematica_unit.py  test_memory.py  test_notebook_unit.py  test_notes.py  test_openai.py  test_openai_integration.py  test_openai_main.py  test_pricing.py  test_sympy.py  test_sympy_integration.py  test_tool_chainer.py  test_tool_chainer_100.py  test_tool_chainer_edge_cases.py  test_tool_chainer_final_1_percent.py  test_tool_chainer_final_coverage.py  test_tool_chainer_integration.py  test_tool_chainer_isolated.py  test_tool_chainer_main.py  test_vim.py  (+1 more)
tests/fixtures/: README.md  __init__.py  ci_test_setup.md  mock_imap_server.py  notes_fixtures.py  oauth2_setup.md
tests/integration/: __init__.py  test_arxiv.py  test_arxiv_unhappy_paths.py  test_claude_integration.py  test_cli_integration.py  test_cli_tools_integration.py  test_code2prompt_integration.py  test_dalle2_basic_metadata  test_dalle3_enhanced_metadata  test_email_integration.py  test_email_move_integration.py  test_gemini_embeddings_integration.py  test_gemini_integration.py  test_gemini_memory_integration.py  test_gemini_memory_simple.py  test_gemini_mime_integration.py  test_github_integration.py  test_google_calendar_enhanced_api.py  test_google_calendar_integration.py  test_google_calendar_real_world_scenarios.py  test_google_calendar_timezone_integration.py  test_google_calendar_unhappy_paths.py  test_google_maps_integration.py  test_gpt5_integration.py  test_image_generation_integration.py  test_imagen3_basic_metadata  test_imagen3_safety_attributes  test_jq_integration.py  test_list_models_integration.py  test_llm_integration.py  test_llm_unhappy_paths.py  test_mutt_cli_integration.py  test_mutt_file_integration.py  test_mutt_integration.py  test_mutt_workflows.py  test_notebook_integration.py  test_notes_integration.py  test_notes_mcp_integration.py  test_openai_embeddings_integration.py  test_openai_integration.py  (+4 more)
tests/unit/: test_agent_coverage.py  test_claude_unit.py  test_cli_tools_unit.py  test_common_unit.py  test_email_unit.py  test_gemini_comprehensive.py  test_gemini_mime_handling.py  test_gemini_unit.py  test_github_unit.py  test_google_calendar_enhanced_parsing.py  test_google_calendar_idiot_proof.py  test_google_calendar_search.py  test_google_calendar_timezone.py  test_google_calendar_unit.py  test_google_maps_unit.py  test_grok_unit.py  test_image_generation_metadata_unit.py  test_llm_common_unit.py  test_llm_provider_wiring.py  test_llm_shared_unit.py  test_main.py  test_memory_unit.py  test_model_loader.py  test_mutt_filesystem_operations.py  test_mutt_internal_unit.py  test_mutt_unit.py  test_notes.py  test_openai_comprehensive.py  test_openai_unit.py  test_py2nb_unit.py  test_system_prompt_unit.py  test_tool_chainer_comprehensive.py  test_tool_chainer_unit.py
(+259 files in other folders)
