[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-handley-lab"
version = "0.0.0b6"
description = "MCP Handley Lab - A comprehensive MCP toolkit for research productivity and lab management"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Handley Research Group", email = "wh260@cam.ac.uk"}
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=0.5.0",
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.21.3",
    "Pillow>=10.0.0",
    "httpx>=0.25.0",
    "packaging>=21.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.0.0",
    "pytest-vcr>=1.0.0",
    "vcrpy>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "tomli>=2.0.0",
]

[project.scripts]
mcp-jq = "mcp_handley_lab.jq.tool:mcp.run"
mcp-vim = "mcp_handley_lab.vim.tool:mcp.run"
mcp-code2prompt = "mcp_handley_lab.code2prompt.tool:mcp.run"
mcp-arxiv = "mcp_handley_lab.arxiv.tool:mcp.run"
mcp-google-calendar = "mcp_handley_lab.google_calendar.tool:mcp.run"
mcp-gemini = "mcp_handley_lab.llm.gemini.tool:mcp.run"
mcp-openai = "mcp_handley_lab.llm.openai.tool:mcp.run"
mcp-claude = "mcp_handley_lab.llm.claude.tool:mcp.run"
mcp-email = "mcp_handley_lab.email.tool:mcp.run"
mcp-github = "mcp_handley_lab.github.tool:mcp.run"
mcp-handley-lab = "mcp_handley_lab.__main__:main"


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mcp_handley_lab = ["py.typed", "llm/*/models.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "unit: marks tests as unit tests (select with '-m unit')",
    "vcr: marks tests that use VCR.py for HTTP recording/playback",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Line too long, handled by black

[tool.coverage.run]
omit = [
    "src/mcp_handley_lab/__main__.py",
    "tests/*",
    "venv/*",
]
